// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accept Button primary success Button 1`] = `
<button
  className="width-100% btn btn-success"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Accept Button secondary success Button 1`] = `
<button
  className="width-100% btn btn-success"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Accept Button tertiary success Button 1`] = `
<button
  className="width-100% btn-success btn btn-link"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Default Button primary Button 1`] = `
<button
  className="width-100% btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Default Button secondary Button 1`] = `
<button
  className="width-100% btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Default Button tertiary Button 1`] = `
<button
  className="width-100% btn-primary btn btn-link"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Tertiary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Disabled Button primary disabled Button 1`] = `
<button
  className="width-100% disabled btn btn-primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Disabled Button secondary disabled Button 1`] = `
<button
  className="width-100% disabled btn btn-primary"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Secondary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Disabled Button tertiary disabled Button 1`] = `
<button
  className="width-100% disabled btn-primary btn btn-link"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Primary
  <canvas
    className="ink"
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;
